--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,13 +26,13 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="minus" />
+            android:text="plus" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="plus"
+            android:text="minus"
             tools:layout_editor_absoluteX="161dp"
             tools:layout_editor_absoluteY="399dp" />
 
@@ -42,7 +42,7 @@
             android:layout_height="120dp"
             tools:layout_editor_absoluteX="161dp"
             tools:layout_editor_absoluteY="496dp"
-            android:background="@drawable/картинка"/>
+            android:background="@drawable/image"/>
 
 
     </LinearLayout>
